--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,128 @@
-.App {
+
+body {
+  background-color: black;
+}
+
+button {
+  border: 2px solid black;
+  background-color: #f2f4f7;
+  color: black;
+  border-radius: 30px;
+  line-height: 1.2;
+  padding: 5px 15px;
+  margin-right: 5px;
+  font-weight: bold;
+  white-space: nowrap;
+  margin-bottom: 5px;
+  cursor: pointer;
+}
+
+button:disabled {
+  opacity: 0.4;
+  cursor: not-allowed;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+h2 {
+  font-size: 18px;
+  margin: 5px auto;
+}
+
+h1 {
+  color: red;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.tabs {
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
+  background-color: #fe001a;
+  border-radius: 50px 50px 0 0;
+  overflow: hidden;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  box-shadow: 0px 0px 20px #fff;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.tab-list {
+  border-bottom: 1px solid #f2f4f7;
+  padding-left: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.tab-list-item {
+  display: inline-block;
+  list-style: none;
+  margin-bottom: -1px;
+  padding: 0.5rem 0.75rem;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tab-list-active {
+  background-color: #f2f4f7;
+  border: 1px solid #f2f4f7;
+  border-width: 1px 1px 0 1px;
+}
+.cpu-screen {
+  border-radius: 0 0 50px 50px;
+  padding-top: 30px;
+  top: 0;
+  bottom: unset;
+}
+
+.button-container {
+  text-align: center;
+}
+
+.soda-container {
+  display: flex;
+  gap: 25px;
+  margin: 0 20px;
+  justify-content: space-between;
+}
+.machine-input {
+  display: block;
+  background: #f2f4f7;
+  font-size: 18px;
+  line-height: 1.2;
+  border: 1px solid black;
+  padding: 0 5px;
+  margin: 5px 0;
+}
+.outerbar {
+  display: block;
+  width: 50px;
+  border: 1px solid black;
+  background-color: #f2f4f7;
+  border-radius: 30px 30px 0 0;
+  overflow: hidden;
+  position: relative;
+  flex-shrink: 0;
+}
+.innerbar {
+  background-color: #1ca3ec;
+  position: absolute;
+  bottom: 0;
+  width: 90%;
+  left: 5%;
+}
+
+.buttons-container {
+  padding-bottom: 20px;
 }
